--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -29,6 +29,7 @@
     font-size: 5.6rem;
     font-weight: 700;
     margin-bottom: 3.2rem;
+    margin-top: 20rem;
     text-align: left;
 
     @include respond(tab-land) {
@@ -49,6 +50,7 @@
 
   .hero-cta {
     display: flex;
+    margin-bottom: 20rem;
 
     @include respond(tab-port) {
       justify-content: center;
