--- a/src/style/sections/_contact.scss
+++ b/src/style/sections/_contact.scss
@@ -33,4 +33,32 @@
       }
     }
   }
+
+  .formContainer {
+    position: relative;
+    margin: 8% auto;
+    min-height: 60%;
+    width: 75%;
+    //padding: 0px 0px 5px 15px;
+    align-items: center;
+    margin-bottom: 3.2rem;
+    margin-top: 0rem;
+  }
+  .formInput {
+    //display: block;
+    color: $white-color;
+    //margin: 0px 0px 15px 15px;
+    padding: 4px;
+    background: transparent;
+    width: 100%;
+    height: 5%;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #aaa;
+  }
+  ::placeholder {
+    color: $white-color;
+    opacity: 0.7
+  }
 }
